[package]
name = "data_cleansing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
gcp-bigquery-client = "0.18.0"
serde = "^1.0"
serde_json = "^1.0"
time = { version = "0.3.22", features = [
    "local-offset",
    "serde",
    "serde-well-known",
] }
dotenv = "0.15.0"
